# ghost-hunter

./: .gitattributes  .gitignore  README.md  config.yml  main.py  pyproject.toml
discussion/: export_attackers.py  profit_measurement.py  reward_farmers.py  task1_top20.py  task2_activity.py  task2_makers.py  task2_profile.py
rq1/: condition_mappings.py  condition_mappings_v1.py  decode_participants.py  rq1_analysis.py  v1.sql  v2.sql
rq2/: collect_proxy_trap_bytecodes.py  fetch_proxy_trap_bytecodes.py  rq2_analysis.py
rq3/reuse/: analyze_reuse.py  export_forks.py  ref_selectors.json  testnet_ids.json
rq3/sql/: 01_orderfilled_by_chain_sweep.sql  02_fork_contracts_and_windows.sql  03_entrypoint_operator_discovery.sql  04_selector_revert_breakdown.sql  05_daily_matchorders_revert_tx.sql  06_daily_revert_peak_alltime.sql  07_userop_revert_4337.sql  08_safe_executionfailure_revert.sql  09_monthly_activity.sql  similarity_jaccard.sql
src/ghost_hunter/core/: client.py  context.py  decoder.py  engine.py  models.py
src/ghost_hunter/rules/: approve_revoke.py  balance_drain.py  collateral_race.py  custom_error.py  fee_exceeds_max_rate.py  nonce_bump.py  proxy_trap.py  unclassified.py
tests/: test_collateral_race.py  test_engine.py  test_rules.py  test_v1_rules.py
